simple login flow done

--- a/login/theme.properties
+++ b/login/theme.properties
@@ -10,3 +10,8 @@ kcLabelClass=ht6-form-label
 kcInputClass=ht6-form-input
 kcButtonClass=ht6-button
 kcButtonPrimaryClass=primary
+kcFormHeaderClass=ht6-form-header
+kcInfoCardClass=ht6-info-card
+kcInputErrorMessageClass=ht6-input-error-msg
+
+headerBrand=Hack the 6ix
