add ht6 icon and responsive fixes

--- a/login/theme.properties
+++ b/login/theme.properties
@@ -5,6 +5,7 @@ kcBodyClass=ht6-kc-body
 kcLoginClass=ht6-login
 kcHeaderClass=ht6-login-header
 kcFormCardClass=ht6-login-formcard
+kcInfoAreaWrapperClass=ht6-card-infoarea
 kcFormGroupClass=ht6-form-group
 kcLabelClass=ht6-form-label
 kcInputClass=ht6-form-input
@@ -13,5 +14,6 @@ kcButtonPrimaryClass=primary
 kcFormHeaderClass=ht6-form-header
 kcInfoCardClass=ht6-info-card
 kcInputErrorMessageClass=ht6-input-error-msg
+
 
 headerBrand=Hack the 6ix
