fix card display on mobile and adjust spacing on login page, do not split inputs on mobile for registration

--- a/login/theme.properties
+++ b/login/theme.properties
@@ -5,6 +5,7 @@ kcBodyClass=ht6-kc-body
 kcLoginClass=ht6-login
 kcHeaderClass=ht6-login-header
 kcFormCardClass=ht6-login-formcard
+kcFormCardWrapperClass=ht6-login-formcardwrapper
 kcInfoAreaWrapperClass=ht6-card-infoarea
 kcFormGroupClass=ht6-form-group
 kcLabelClass=ht6-form-label
