--- a/login/theme.properties
+++ b/login/theme.properties
@@ -1,5 +1,5 @@
 locales=ca,cs,da,de,en,es,fr,hu,it,ja,lt,nl,no,pl,pt-BR,ru,sk,sv,tr,zh-CN
-styles=css/ht6.css
+styles=css/ht6.css?v=1
 meta=viewport==width=device-width,initial-scale=1
 kcBodyClass=ht6-kc-body
 kcLoginClass=ht6-login
