--- a/login/theme.properties
+++ b/login/theme.properties
@@ -1,20 +1,8 @@
-locales=ca,cs,da,de,en,es,fr,hu,it,ja,lt,nl,no,pl,pt-BR,ru,sk,sv,tr,zh-CN
-styles=css/ht6.css?v=1
-meta=viewport==width=device-width,initial-scale=1
-kcBodyClass=ht6-kc-body
-kcLoginClass=ht6-login
-kcHeaderClass=ht6-login-header
-kcFormCardClass=ht6-login-formcard
-kcFormCardWrapperClass=ht6-login-formcardwrapper
-kcInfoAreaWrapperClass=ht6-card-infoarea
-kcFormGroupClass=ht6-form-group
-kcLabelClass=ht6-form-label
-kcInputClass=ht6-form-input
-kcButtonClass=ht6-button
-kcButtonPrimaryClass=primary
-kcFormHeaderClass=ht6-form-header
-kcInfoCardClass=ht6-info-card
-kcInputErrorMessageClass=ht6-input-error-msg
+parent=keycloak
+import=common/keycloak
 
+styles=css/login.css css/styles.css
+scripts=js/script.js
 
-headerBrand=Hack the 6ix
+kcFormPasswordVisibilityIconShow fa fa-eye
+kcFormPasswordVisibilityIconHide fa fa-eye-slash
